--- a/index.html
+++ b/index.html
@@ -8,18 +8,5 @@
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <div class="gameboard">
-      <div class="game-squares top-left"></div>
-      <div class="game-squares top-middle"></div>
-      <div class="game-squares top-right"></div>
-      <div class="game-squares middle-left"></div>
-      <div class="game-squares middle-middle"></div>
-      <div class="game-squares middle-right"></div>
-      <div class="game-squares bottom-left"></div>
-      <div class="game-squares bottom-middle"></div>
-      <div class="game-squares bottom-right"></div>
-      <button class="X">X</button><button class="O">O</button>
-    </div>
-  </body>
+  <body></body>
 </html>
