Trying to figure out right conditions to set so that the game knows what player is supposed to be going on each turn.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
       <div class="game-squares bottom-middle"></div>
       <div class="game-squares bottom-right"></div>
     </div>
-    <button class="X">X</button><button class="O">O</button>
+    <button class=".X">X</button><button class=".O">O</button>
   </body>
 </html>
