--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="gameboard">
-      <div class="game-squares top-left"></div>
-      <div class="game-squares top-middle"></div>
-      <div class="game-squares top-right"></div>
-      <div class="game-squares middle-left"></div>
-      <div class="game-squares middle-middle"></div>
-      <div class="game-squares middle-right"></div>
-      <div class="game-squares bottom-left"></div>
-      <div class="game-squares bottom-middle"></div>
-      <div class="game-squares bottom-right"></div>
+    <div class="gameBoardContainer">
+      <div class="gameboard">
+        <div class="game-squares top-left"></div>
+        <div class="game-squares top-middle"></div>
+        <div class="game-squares top-right"></div>
+        <div class="game-squares middle-left"></div>
+        <div class="game-squares middle-middle"></div>
+        <div class="game-squares middle-right"></div>
+        <div class="game-squares bottom-left"></div>
+        <div class="game-squares bottom-middle"></div>
+        <div class="game-squares bottom-right"></div>
+      </div>
     </div>
-    <button class=".X">X</button><button class=".O">O</button>
   </body>
 </html>
