Figured out how to set winning combinations

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="gameboard">
         <div class="game-squares top-left"></div>
         <div class="game-squares top-middle"></div>
-        <div class="game-squares top-right"></div>
+        <div class="game-squares top-rightgit"></div>
         <div class="game-squares middle-left"></div>
         <div class="game-squares middle-middle"></div>
         <div class="game-squares middle-right"></div>
