Got game to identify when a player one but need to figure out how to prevent players from entering in more input after that

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div class="gameBoardContainer">
+      <div id="display"></div>
       <div class="gameboard">
         <div class="game-squares top-left"></div>
         <div class="game-squares top-middle"></div>
